Fixed a couple small bugs around secondary phone verification. Changed Job Status button icon back to a icon for Incomplete Forms

--- a/app/res/layout/fragment_secondary_phone_number.xml
+++ b/app/res/layout/fragment_secondary_phone_number.xml
@@ -186,6 +186,7 @@
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/continueButton"
+                            style="@style/CustomButtonStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
