--- a/app/res/layout/fragment_recovery_code.xml
+++ b/app/res/layout/fragment_recovery_code.xml
@@ -79,6 +79,7 @@
                 android:layout_width="42dp"
                 android:layout_height="42dp"
                 android:background="@drawable/connect_side_icon_bg"
+                android:layout_marginTop="6dp"
                 android:gravity="center">
 
                 <ImageView
@@ -124,6 +125,7 @@
                 android:layout_width="42dp"
                 android:layout_height="42dp"
                 android:background="@drawable/connect_side_icon_bg"
+                android:layout_marginTop="6dp"
                 android:gravity="center">
 
                 <ImageView
