--- a/app/res/layout/fragment_secondary_phone_number.xml
+++ b/app/res/layout/fragment_secondary_phone_number.xml
@@ -97,6 +97,7 @@
                             android:layout_width="42dp"
                             android:layout_height="42dp"
                             android:background="@drawable/connect_side_icon_bg"
+                            android:layout_marginTop="6dp"
                             android:gravity="center">
 
                             <ImageView
