--- a/app/res/layout/fragment_signup.xml
+++ b/app/res/layout/fragment_signup.xml
@@ -82,6 +82,7 @@
                     android:layout_width="42dp"
                     android:layout_height="42dp"
                     android:background="@drawable/connect_side_icon_bg"
+                    android:layout_marginTop="6dp"
                     android:gravity="center">
 
                     <ImageView
@@ -118,6 +119,7 @@
                     android:layout_width="42dp"
                     android:layout_height="42dp"
                     android:background="@drawable/connect_side_icon_bg"
+                    android:layout_marginTop="6dp"
                     android:gravity="center">
 
                     <ImageView
