--- a/app/res/layout/screen_connect_user_deactivate_otp_verify.xml
+++ b/app/res/layout/screen_connect_user_deactivate_otp_verify.xml
@@ -72,6 +72,7 @@
                 android:layout_width="42dp"
                 android:layout_height="42dp"
                 android:background="@drawable/connect_side_icon_bg"
+                android:layout_marginTop="6dp"
                 android:gravity="center">
 
                 <ImageView
