--- a/app/res/layout/fragment_connect_payment_setup.xml
+++ b/app/res/layout/fragment_connect_payment_setup.xml
@@ -13,7 +13,7 @@
         android:textSize="14sp"
         android:letterSpacing="0.08"
         android:layout_height="wrap_content"
-        android:text="Please confirm your exact name and phone number to receive payment"
+        android:text="@string/connect_payment_info_description"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +51,7 @@
             android:layout_height="55dp"
             android:layout_marginLeft="16dp"
             android:background="@drawable/connect_edit_text_bg"
-            android:hint="ConnectID Name"
+            android:hint="@string/connect_payment_info_name_hint"
             android:imeOptions="actionNext"
             android:paddingStart="16dp"
             android:textColorHint="@color/connect_grey"
@@ -140,21 +140,15 @@
         </LinearLayout>
     </LinearLayout>
 
-    <org.commcare.views.connect.RoundedButton
-
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/continue_button"
+        style="@style/CustomButtonStyle"
         android:layout_width="wrap_content"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_gravity="end"
-        android:gravity="start|center"
-        android:text="Save"
+        android:text="@string/connect_payment_info_save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phone_layout"
-        app:roundButtonBackgroundColor="@color/connect_blue_color"
-        app:roundButtonBorderRadius="@dimen/dp48"
-        app:roundButtonIcon="@drawable/connect_right_arrow"
-        app:roundButtonIconLeftAlign="false"
-        app:roundButtonTextColor="@color/white"
-        app:roundButtonTextSize="6.5sp" />
+ />
 </androidx.constraintlayout.widget.ConstraintLayout>
