Added fragment for unlocking ConnectID at start of ConnectActivity. Moved redirection code into unlock fragment (happens after user unlocks ConnectID).

--- a/app/res/navigation/nav_graph_connect.xml
+++ b/app/res/navigation/nav_graph_connect.xml
@@ -6,6 +6,13 @@
     app:startDestination="@id/connect_jobs_list_fragment">
 
     <fragment
+        android:id="@+id/connect_unlock_fragment"
+        android:name="org.commcare.fragments.connect.ConnectUnlockFragment"
+        android:label="fragment_connect_unlock"
+        tools:layout="@layout/fragment_connect_unlock">
+    </fragment>
+
+    <fragment
         android:id="@+id/connect_jobs_list_fragment"
         android:name="org.commcare.fragments.connect.ConnectJobsListsFragment"
         android:label="fragment_connect_jobs_list"
