Changing isButtonVisible in job intro fragment to default to true.

--- a/app/res/navigation/nav_graph_connect.xml
+++ b/app/res/navigation/nav_graph_connect.xml
@@ -54,7 +54,8 @@
 
         <argument
             android:name="isButtonVisible"
-            app:argType="boolean" />
+            app:argType="boolean"
+            android:defaultValue="true" />
         <action
             android:id="@+id/action_connect_job_intro_fragment_to_connect_job_detail_bottom_sheet_dialog_fragment"
             app:destination="@id/connect_job_detail_bottom_sheet_dialog_fragment" />
