--- a/app/res/navigation/nav_graph_connect.xml
+++ b/app/res/navigation/nav_graph_connect.xml
@@ -54,8 +54,7 @@
 
         <argument
             android:name="isButtonVisible"
-            app:argType="boolean"
-            android:defaultValue="true" />
+            app:argType="boolean" />
         <action
             android:id="@+id/action_connect_job_intro_fragment_to_connect_job_detail_bottom_sheet_dialog_fragment"
             app:destination="@id/connect_job_detail_bottom_sheet_dialog_fragment" />
