--- a/app/res/values/themes.xml
+++ b/app/res/values/themes.xml
@@ -150,5 +150,8 @@
     <style name="Theme.Dialog.NoTitle" parent="Theme.AppCompat.Light.Dialog">
         <item name="windowNoTitle">true</item>
     </style>
+    <style name="AlertDialogTheme" parent="Theme.MaterialComponents.Light.Dialog.Alert">
+        <item name="colorPrimary">@color/connect_dark_blue_color</item>
+    </style>
 
 </resources>
