--- a/app/res/layout/screen_login.xml
+++ b/app/res/layout/screen_login.xml
@@ -73,12 +73,32 @@
                             android:paddingRight="@dimen/login_box_margins"
                             android:paddingStart="@dimen/login_box_margins">
 
-                            <TextView
+                            <org.commcare.views.connect.connecttextview.ConnectMediumTextView
                                 android:id="@+id/welcome_msg"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:layout_margin="@dimen/content_min_margin"
+                                android:textColor="@color/cc_neutral_color"
+                                android:textSize="@dimen/text_medium" />
+
+                            <com.google.android.material.button.MaterialButton
+                                android:id="@+id/connect_login_button"
+                                android:layout_width="fill_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="bottom"
+                                android:paddingTop="@dimen/content_start"
+                                android:paddingBottom="@dimen/content_start"
+                                android:text="@string/connect_button_logged_in"
+                                android:visibility="gone"/>
+
+                            <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+                                android:id="@+id/login_or"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_margin="@dimen/content_min_margin"
+                                android:text="@string/choice_or"
                                 android:textColor="@color/cc_neutral_color"
                                 android:textSize="@dimen/text_medium" />
 
