--- a/app/res/layout/fragment_channel_consent_bottom_sheet.xml
+++ b/app/res/layout/fragment_channel_consent_bottom_sheet.xml
@@ -57,7 +57,7 @@
 
             <RelativeLayout
                 android:id="@+id/relativeLayout1"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.button.MaterialButton
@@ -65,8 +65,8 @@
                     android:id="@+id/decline_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                   android:layout_margin="16dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_margin="16dp"
                     android:gravity="start|center"
                     android:text="@string/connect_messaging_channel_consent_decline" />
 
@@ -74,7 +74,7 @@
                     android:id="@+id/accept_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_margin="16dp"
                     android:gravity="start|center"
                     android:text="@string/connect_messaging_channel_consent_accept"
