--- a/app/res/layout/item_channel.xml
+++ b/app/res/layout/item_channel.xml
@@ -40,7 +40,7 @@
         <org.commcare.views.connect.connecttextview.ConnectMediumTextView
             android:id="@+id/tvChannelName"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="2dp"
             android:text="Channel Name"
@@ -77,7 +77,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <org.commcare.views.connect.connecttextview.ConnectRegularTextView
-            android:background="@drawable/shape_border_10px_blue"
+            android:background="@drawable/rounded_blue_bg"
             android:id="@+id/tvUnreadCount"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
