--- a/app/res/layout/fragment_secondary_phone_number.xml
+++ b/app/res/layout/fragment_secondary_phone_number.xml
@@ -52,12 +52,11 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginEnd="16dp"
-                        android:fontFamily="@font/roboto_bold"
-                        android:text="Add Secondary Phone Number"
+                        android:text="@string/add_secondary_phone_number"
                         android:textColor="@color/connect_dark_blue_color"
                         android:textSize="18sp" />
 
-                    <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+                    <TextView
                         android:id="@+id/secondary_phone_sub_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -65,8 +64,8 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="16dp"
-                        android:fontFamily="@font/roboto_bold"
-                        android:text="Add secondary phone number to reset your Recovery Code."
+                        android:textStyle="bold"
+                        android:text="@string/add_secondary_phone_number_to_reset_your_recovery_code"
                         android:textColor="@color/connect_subtext_80"
                         android:textSize="12sp" />
 
