--- a/app/res/layout/fragment_signup.xml
+++ b/app/res/layout/fragment_signup.xml
@@ -37,8 +37,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:fontFamily="@font/roboto_bold"
-                android:text="ConnectId Signup"
+                android:text="@string/connect_registration_title"
                 android:textColor="@color/connect_dark_blue_color"
                 android:textSize="16sp" />
 
@@ -50,7 +49,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:fontFamily="@font/roboto_regular"
-                android:text="ConnectId Signup"
+                android:text="@string/connect_registration_title"
                 android:textColor="@color/connect_subtext"
                 android:textSize="12sp" />
 
@@ -254,7 +253,7 @@
                     style="@style/NegativeButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Recover"
+                    android:text="@string/connect_recover"
                     />
 
 
