--- a/app/res/layout/screen_login.xml
+++ b/app/res/layout/screen_login.xml
@@ -100,7 +100,8 @@
                                 android:layout_margin="@dimen/content_min_margin"
                                 android:text="@string/choice_or"
                                 android:textColor="@color/cc_neutral_color"
-                                android:textSize="@dimen/text_medium" />
+                                android:textSize="@dimen/text_medium"
+                                android:visibility="gone"/>
 
                             <Spinner
                                 android:id="@+id/app_selection_spinner"
