--- a/app/res/layout/view_job_card.xml
+++ b/app/res/layout/view_job_card.xml
@@ -35,32 +35,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_job_title" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="@+id/tv_job_discrepation"
-            app:layout_constraintTop_toBottomOf="@+id/tv_job_discrepation">
-
-            <org.commcare.views.connect.connecttextview.ConnectMediumTextView
-                android:id="@+id/connect_job_pay"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="100"
-                android:textColor="@color/connect_blue_color"
-                android:textSize="14sp" />
-
-            <org.commcare.views.connect.connecttextview.ConnectRegularTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="@string/connect_job_info_per_visit"
-                android:textColor="@color/connect_subtext_color"
-                android:textSize="14sp" />
-        </LinearLayout>
-
         <org.commcare.views.connect.connecttextview.ConnectMediumTextView
             android:id="@+id/tv_view_more"
             android:layout_width="0dp"
@@ -70,7 +44,7 @@
             android:textColor="@color/connect_dark_blue_color"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_job_discrepation" />
 
 
         <org.commcare.views.connect.connecttextview.ConnectBoldTextView
@@ -81,7 +55,7 @@
             android:textColor="@color/connect_grey"
             android:textSize="12sp"
             android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/tv_job_time"
+            app:layout_constraintTop_toBottomOf="@+id/tv_job_discrepation"
             app:layout_constraintEnd_toEndOf="parent"
             tools:visibility="visible" />
 
@@ -89,12 +63,11 @@
             android:id="@+id/tv_job_time"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:text="8:00 AM - 5:00 PM"
             android:textColor="@color/connect_dark_blue_color"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_view_more" />
+            app:layout_constraintTop_toBottomOf="@+id/tvDailyVisitTitle" />
 
 
         <org.commcare.views.connect.connecttextview.ConnectRegularTextView
