--- a/app/res/layout/view_progress_job_card.xml
+++ b/app/res/layout/view_progress_job_card.xml
@@ -35,32 +35,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_job_title" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="@+id/tv_job_discrepation"
-            app:layout_constraintTop_toBottomOf="@+id/tv_job_discrepation">
-
-            <org.commcare.views.connect.connecttextview.ConnectMediumTextView
-                android:id="@+id/connect_job_pay"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="100"
-                android:textColor="@color/connect_blue_color"
-                android:textSize="14sp" />
-
-            <org.commcare.views.connect.connecttextview.ConnectRegularTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="@string/connect_job_info_per_visit"
-                android:textColor="@color/connect_subtext_color"
-                android:textSize="14sp" />
-        </LinearLayout>
-
         <org.commcare.views.connect.connecttextview.ConnectMediumTextView
             android:id="@+id/tv_view_more"
             android:layout_width="0dp"
@@ -71,7 +45,7 @@
             android:textColor="@color/connect_dark_blue_color"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_job_discrepation" />
 
         <org.commcare.views.connect.connecttextview.ConnectBoldTextView
             android:id="@+id/tvDailyVisitTitle"
@@ -81,9 +55,8 @@
             android:textColor="@color/connect_grey"
             android:textSize="12sp"
             android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
+            app:layout_constraintTop_toBottomOf="@+id/tv_job_discrepation"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/linearLayout6"
             tools:visibility="visible" />
 
         <org.commcare.views.connect.connecttextview.ConnectBoldTextView
