--- a/app/res/layout/fragment_signup.xml
+++ b/app/res/layout/fragment_signup.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        tools:context="org.commcare.fragments.connectId.ConnectIDSignupFragment">
+        tools:context="org.commcare.connectId.fragments.ConnectIDSignupFragment">
 
         <LinearLayout
             android:id="@+id/firstLayout"
