--- a/app/res/layout/screen_form_entry.xml
+++ b/app/res/layout/screen_form_entry.xml
@@ -70,7 +70,6 @@
             android:id="@+id/nav_btn_prev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:background="@drawable/selector_button_press"
             android:minHeight="@dimen/new_progressbar_button_minheight"
@@ -87,8 +86,7 @@
             android:id="@+id/nav_prog_bar"
             android:indeterminate="false"
             android:indeterminateOnly="false"
-            android:layout_centerVertical="true"
-            android:layout_height="32dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/content_start"
             android:layout_marginLeft="@dimen/content_start"
             android:layout_marginRight="@dimen/content_start"
@@ -110,7 +108,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
             android:background="@drawable/selector_button_press"
             android:minHeight="@dimen/new_progressbar_button_minheight"
             android:minWidth="@dimen/new_progressbar_button_minwidth"
