--- a/app/res/layout/fragment_secondary_phone_number.xml
+++ b/app/res/layout/fragment_secondary_phone_number.xml
@@ -44,11 +44,12 @@
                         android:layout_marginTop="40dp"
                         android:background="@android:color/darker_gray" />
 
-                    <org.commcare.views.connect.connecttextview.ConnectBoldTextView
+                    <TextView
                         android:id="@+id/secondary_phone_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/divider"
+                        android:textStyle="bold"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginEnd="16dp"
