--- a/app/res/layout/screen_connect_phone_verify.xml
+++ b/app/res/layout/screen_connect_phone_verify.xml
@@ -26,7 +26,7 @@
             android:layout_marginTop="40dp"
             android:background="@color/connect_light_grey" />
 
-        <org.commcare.views.connect.connecttextview.ConnectBoldTextView
+        <TextView
             android:id="@+id/connect_phone_verify_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,6 +35,7 @@
             android:layout_marginEnd="16dp"
             android:fontFamily="@font/roboto_medium"
             android:text="@string/enter_otp"
+            android:textStyle="bold"
             android:textColor="@color/connect_dark_blue_color"
             android:textSize="16sp" />
 
@@ -48,16 +49,17 @@
             android:layout_marginEnd="16dp"
             android:orientation="horizontal">
 
-            <org.commcare.views.connect.connecttextview.ConnectRegularTextView
+            <TextView
                 android:id="@+id/connect_phone_verify_label"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textColor="@color/connect_secondary_text"
                 android:textSize="16sp"
-                tools:text="+91 7748962888" />
+                tools:text="+91 7748962888"
+                android:textStyle="normal"/>
 
-            <org.commcare.views.connect.connecttextview.ConnectBoldTextView
+            <TextView
                 android:id="@+id/connect_phone_verify_change"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -66,7 +68,8 @@
                 android:text="@string/connect_verify_phone_change"
                 android:textColor="@color/connect_blue_color"
                 android:textSize="16sp"
-                android:visibility="visible" />
+                android:visibility="visible"
+                android:textStyle="bold"/>
         </LinearLayout>
 
         <LinearLayout
